--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Scottish Enterprise Visual Style Guide
+author: Jen Thomson
+email: jen.thomson@scotent.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Living Style Guide for Scottish Enterprise
+repository: "scotent/se-style-guide"
+url: "https://scotent.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+github_username:  scotent
 
 # Build settings
 markdown: kramdown
@@ -32,6 +31,7 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+permalink: pretty
   
 collections:
   se-templates:
@@ -42,9 +42,7 @@ collections:
     output: true
   se-visual-language:
     output: true
-
-repository: Gatekeeper7/Gatekeeper7.github.io
-
+    
 github: [metadata]
 
 
