--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Living Style Guide for Scottish Enterprise
 repository: "scotent/se-style-guide"
 url: "https://scotent.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: ""
+baseurl: "/se-style-guide"
 github_username:  scotent
 
 # Build settings
