added form elements to nav; started on adding form elements

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ collections:
     output: true
   se-visual-language:
     output: true
+  se-form-elements:
+    output: true
     
 github: [metadata]
 
