--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,8 @@ collections:
     output: true
   se-form-elements:
     output: true
+  se-typography:
+    output: true
     
 github: [metadata]
 
