--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,11 @@ github_username:  scotent
 # Build settings
 markdown: kramdown
 theme: minima
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
 gems:
   - jekyll-feed
 exclude:
