--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ collections:
         output: true
     page-templates:
         output: true
-    elements:
+    page-sections:
         output: true
-    page-patterns:
+    elements:
         output: true
     colour-palettes:
         output: true
